<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_light"
    android:fillViewport="true"
    tools:context="com.caterbazar.activities.ContactUsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/gradient"
            android:foreground="@drawable/vector_back">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/about_app_logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_main_logo"
                    android:tint="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_middle" />

                <TextView
                    android:id="@+id/about_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_app_logo"
                    android:layout_centerInParent="true"
                    android:text="@string/app_name_all_caps"
                    android:textColor="#fff"
                    android:textSize="30dp"
                    android:textStyle="bold" />
            </LinearLayout>


        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:text="@string/contact_address_title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_address"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/contact_phone_title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/act_contact_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_phone"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/contact_phone_title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/act_contact_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_email"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>