<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/gradient"
            android:orientation="vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="Welcome!"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:fontFamily="sans-serif-light"
                android:text="Caterer Manager"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <View
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_middle"
                android:text="Log In"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_content"
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <View
                android:layout_width="0dp"
                android:layout_height="50dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText.White.Hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/act_login_txt_inp_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:hint="@string/placeholder_email"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/grey_800"
                    android:textColorHint="@color/grey_700"
                    android:theme="@style/EditText.White" />

            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText.White.Hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/act_login_txt_inp_passowrd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:hint="@string/placeholder_password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/grey_800"
                    android:textColorHint="@color/grey_700"
                    android:theme="@style/EditText.White" />

            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mxlarge" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/act_login_fab_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:elevation="0dp"
                    android:tint="@color/white"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:borderWidth="0dp"
                    app:elevation="0dp"
                    app:fabSize="normal"
                    app:rippleColor="@color/colorAccent"
                    app:srcCompat="@drawable/ic_chevron_right" />


                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:theme="@style/ProgressBar.White"
                    android:visibility="gone" />

            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/sign_up_for_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_signup"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_600" />


            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
